--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
     </header>
     <div class="row">
       <div class="col ">
-        <p>I am Ryan Adlard, web designer from USA, California. I have rich experience in web site design and building
+        <p>I am Ganesh Vishakarma, web designer from Thane, maharashtra, India. I have rich experience in web site design and building
           and customization, also I am good at wordpress. I love to talk with you about our unique.</p>
       </div>
       <div class="col ">
@@ -20,11 +20,11 @@
         </div>
         <div class="details">
           <p>Freelance . . . . .</p>
-          <p>Available</p>
+          <p>Unavailable</p>
         </div>
         <div class="details">
           <p>Address . . . . .</p>
-          <p>Jaunpur, UP</p>
+          <p>Thane, maharashtra</p>
         </div>
       </div>
     </div>
@@ -45,26 +45,26 @@
         <div>
           <i class="fas fa-music fa-lg"></i>
         </div>
-        <h5>Music Writing</h5>
-        <p>Music copying, transcription, arranging and composition services.</p>
+        <h5>Photo Editing</h5>
+        <p>Basic photo Editing, photo customization Photoshop</p>
       </div>
       <div class="col ">
         <div>
           <i class="fas fa-bullhorn fa-lg"></i>
         </div>
-        <h5>Advetising</h5>
-        <p>Advertising services include television, radio, print, mail and web.</p>
+        <h5>UI</h5>
+        <p>Logo design, wireframeing, prototyping</p>
       </div>
       <div class="col ">
         <div>
           <i class="fas fa-gamepad fa-lg"></i>
         </div>
-        <h5>Game Development</h5>
-        <p>Developing memorable and unique mobile android, ios games.</p>
+        <h5>Photography</h5>
+        <p>Mature Photography, Mildlife Photography, Micro Photography</p>
       </div>
     </div>
   </section>
-  <section class="pricing">
+  <!-- <section class="pricing">
     <header class="jointed">
       <p>p</p><span>ricing</span>
     </header>
@@ -122,7 +122,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="funFact">
     <header>
       <p>fun</p><span>fact</span>
@@ -132,13 +132,13 @@
         <div class="icon">
           <i class="fas fa-compact-disc fa-2x"></i>
         </div>
-        <p>80 Albumes Listened</p>
+        <p>98* Photos Clicked</p>
       </div>
       <div class="col col-3 right-gradient">
         <div class="icon">
           <i class="fas fa-trophy fa-2x"></i>
         </div>
-        <p>15 Awards Won</p>
+        <p>2+ website created</p>
       </div>
       <div class="col col-3 right-gradient">
         <div class="icon">
@@ -150,11 +150,11 @@
         <div class="icon">
           <i class="fas fa-flag fa-2x"></i>
         </div>
-        <p>10 Countries Visited</p>
+        <p>10 states Visited</p>
       </div>
     </div>
   </section>
-  <section class="clients">
+  <!-- <section class="clients">
     <header class="jointed">
       <p>c</p><span>lients</span>
     </header>
@@ -172,7 +172,7 @@
         <img src="../../assets/img/client_4.png" alt="">
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="testimonials">
     <header class="jointed">
       <p>t</p><span>estimonials</span>
