--- a/src/app/components/input-button/input-button.component.scss
+++ b/src/app/components/input-button/input-button.component.scss
@@ -18,6 +18,9 @@ button,
     text-transform: uppercase;
     text-decoration: none;
     color: $dark;
+    &:disabled{
+        pointer-events: none;
+    }
 
     &:hover {
         color: $primary
