--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -15,11 +15,11 @@
       <li><i class="fab fa-stack-overflow"></i></li>
     </ul>
     <div class="user-button">
-      <div><a href="javascript:void(0)">
+      <div><a href="javascript:void(0)" class="disabled">
           <span class="btn-link-text">Download CV</span>
           <span class="btn-text-icon"><i class="fas fa-download"></i></span>
         </a></div>
-      <div><a href="javascript:void(0)">
+      <div><a href="javascript:void(0)" class="disabled">
           <span class="btn-link-text">contact me</span>
           <span class="btn-text-icon"><i class="fas fa-id-card"></i></span>
         </a></div>
