--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,24 +6,24 @@
     </header>
     <div class="row">
       <div class="col col-12 map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7291.928789517268!2d82.68634107141487!3d25.7476575284343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39903bcda1663335%3A0xaf234622dfe84502!2sJaunpur%20Fort.!5e0!3m2!1sen!2sin!4v1580729007073!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7291.928789517268!2d82.68634107141487!3d25.7476575284343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39903bcda1663335%3A0xaf234622dfe84502!2sJaunpur%20Fort.!5e0!3m2!1sen!2sin!4v1580729007073!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
       <div class="col col-12 detail">
         <div class="details">
          <p>Address . . . . .</p>
-          <p>Jaunpur, UP</p>
+          <p>Thane, Maharashtra, India</p>
         </div>
         <div class="details">
           <p>Email . . . . .</p>
-          <p>ramdulare@outlook.com</p>
+          <p>vishwakarma.ganesh15@gmail.com</p>
         </div>
         <div class="details">
            <p>Phone . . . . .</p>
-          <p>+91 897 332 4647</p>
+          <p>+91 8888888888</p>
         </div>
         <div class="details">
           <p>Freelance . . . . .</p>
-          <p>Available</p>
+          <p>Unavailable</p>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
           <input-text [(inputValue)]="message" [placeholder]="'message'" [type]="'textarea'"></input-text>
       </div>
       <div class="col col-12">
-        <input-button [disabled]="false" [withIcon]="true" [text]="'Send Message'" (btnClick)="sendMail($event)"></input-button>
+        <input-button [disabled]="true" [withIcon]="true" [text]="'Send Message'" (btnClick)="sendMail($event)"></input-button>
       </div>
     </div>
   </section>
