--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -105,6 +105,9 @@
                     padding: 11px 0;
                     margin-bottom: 2px;
                     position: $rel;
+                    @media (max-width: 560px) {
+                        width: 100%;
+                    }
 
                     &:after {
                         @include bottomgradientBorder();
@@ -137,6 +140,11 @@
             .col {
                 position: relative;
                 @include padding (15px);
+
+                @media (max-width: 560px) {
+                    @include flexContent(0,0,100%);
+                }
+                
             }
         }
     }
