--- a/src/app/user-card/user-card.component.scss
+++ b/src/app/user-card/user-card.component.scss
@@ -62,6 +62,7 @@
                 display: inline-block;
 
                 i {
+                    pointer-events: none;
                     margin: 0 8px;
 
                 }
@@ -97,6 +98,12 @@
 
                 .btn-text-icon {
                     margin-left: 10px;
+                }
+
+                &.disabled{
+                    opacity: 0.7;
+                    user-select: none;
+                    pointer-events: none;
                 }
             }
 
