iamge_url_change
iamge_url_change

--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,7 +1,7 @@
 <div class="user-container">
   <div class="user-image clippy">
     <img
-      src="../../assets/img/person.png"
+      src="assets/img/person.png"
       alt="" class="">
   </div>
   <div class="user-details">
