--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,7 +6,7 @@
     </header>
     <div class="row">
       <div class="col col-12 map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7291.928789517268!2d82.68634107141487!3d25.7476575284343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39903bcda1663335%3A0xaf234622dfe84502!2sJaunpur%20Fort.!5e0!3m2!1sen!2sin!4v1580729007073!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7534.097962003578!2d72.98199022281885!3d19.236696977808727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7bbfe6517325d%3A0xb54bb59cfac001f4!2sSandoz%20Baug%2C%20Thane%20West%2C%20Thane%2C%20Maharashtra%20400607!5e0!3m2!1sen!2sin!4v1582575569690!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
       <div class="col col-12 detail">
         <div class="details">
