--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -6,12 +6,17 @@
 .resume-container {
     width: 100%;
     height: 100%;
-    max-width: 644px;
+    // max-width: 644px;
     border-top-right-radius: $borderRadious;
     border-bottom-right-radius: $borderRadious;
     background: $light;
     overflow-y: scroll;
     position: $rel;
+    @media (max-width : 768px) {
+        border-radius: $borderRadious;
+        margin-bottom: 6px;
+        height: auto;
+    }
 
     section {
         @include box (auto, auto);
@@ -148,7 +153,7 @@
                 height: fit-content;
                 margin-bottom: 30px;
                 &>.col{
-                    @media (max-width : 560px) {
+                    @media (max-width : 768px) {
                         @include flexContent(0,0,100%);
                     }
                 }
@@ -157,7 +162,7 @@
             .design .col,
             .language .col {
                 
-                // @media (max-width : 560px) {
+                // @media (max-width : 768px) {
                 //     @include flexContent(0,0,100%);
                 // }
 
@@ -168,14 +173,14 @@
             }
 
             .design .col {
-                // @media (max-width : 560px) {
+                // @media (max-width : 768px) {
                 //     @include flexContent(0,0,100%);
                 // }
                 @include padding(20px, 0px);
             }
 
             .language .col {
-                // @media (max-width : 560px) {
+                // @media (max-width : 768px) {
                 //     @include flexContent(0,0,100%);
                 // }
                 @include padding(20px, 0px, 10px, 0px);
@@ -190,7 +195,7 @@
                 }
 
                 .col {
-                    @media (max-width : 560px) {
+                    @media (max-width : 768px) {
                         @include flexContent(0,0,50%);
                     }
                     padding: 0;
