--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,8 +28,8 @@ body {
     }
 
     ::-webkit-scrollbar {
-        width: 6px;
-        background-color: transparent;
+        // width: 6px;
+        // background-color: transparent;
     }
 
     ::-webkit-scrollbar-thumb {
