--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -9,7 +9,7 @@
     border-top-right-radius: $borderRadious;
     border-bottom-right-radius: $borderRadious;
     background: $light;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     position: $rel;
     @media (max-width : 768px) {
         border-radius: $borderRadious;
