--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,11 +5,11 @@
 
 .contact-container {
     @include fullBox();
-    max-width: 644px;
+    // max-width: 644px;
     border-top-right-radius: $borderRadious;
     border-bottom-right-radius: $borderRadious;
     background: $light;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     position: $rel;
     @media (max-width : 768px) {
         border-radius: $borderRadious;
