--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar" >
   <ul>
     <li *ngFor="let configs of config">
-      <a href="javascript:void(0)" [ngClass]="{'active': configs.active === true }" (click)='navClicke(configs.title)'>
+      <a href="javascript:void(0)" [ngClass]="{'active': configs.active === true }" (click)='navClicke($event)'>
         <span class="navIcon">
           <i class="fas fa-2x" [ngClass]="configs.icon">
           </i>
