--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -9,7 +9,8 @@
     border-top-right-radius: $borderRadious;
     border-bottom-right-radius: $borderRadious;
     background: $light;
-    // overflow-y: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     position: $rel;
 
     @media (max-width: 764px) {
