file_location_fix
file_location_fix

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -160,16 +160,16 @@
     </header>
     <div class="row">
       <div class="col  right-gradient">
-        <img src="../../assets/img/client_1.png" alt="">
+        <img src="assets/img/client_1.png" alt="">
       </div>
       <div class="col  right-gradient">
-        <img src="../../assets/img/client_2.png" alt="">
+        <img src="assets/img/client_2.png" alt="">
       </div>
       <div class="col  right-gradient">
-        <img src="../../assets/img/client_3.png" alt="">
+        <img src="assets/img/client_3.png" alt="">
       </div>
       <div class="col ">
-        <img src="../../assets/img/client_4.png" alt="">
+        <img src="assets/img/client_4.png" alt="">
       </div>
     </div>
   </section>
