--- a/src/app/components/portfolio-gallery/portfolio-gallery.component.html
+++ b/src/app/components/portfolio-gallery/portfolio-gallery.component.html
@@ -1,4 +1,4 @@
-<div class="gallery-wrapper" [ngClass]="{'hidden': sceleton}" (window:resize)="screenSize($event)">
+<div class="gallery-wrapper" [ngClass]="{'hidden': sceleton}" >
   <header>
     <div class="title">
       <p *ngIf="!title === false">Recent</p><span>Works</span>
