--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -149,4 +149,14 @@
             }
         }
     }
+
+    #testDiv{
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        @include box(20px, 40px);
+        text-align: center;
+        z-index: 5000;
+        padding-top: 2.5px;
+    }
 }
