--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,19 +11,19 @@
       <div class="col col-12 detail">
         <div class="details">
          <p>Address . . . . .</p>
-          <p>Thane, Maharashtra, India</p>
+          <p>{{Address}}, {{Residence}}</p>
         </div>
         <div class="details">
           <p>Email . . . . .</p>
-          <p>vishwakarma.ganesh15@gmail.com</p>
+          <p>{{myEmail}}</p>
         </div>
         <div class="details">
            <p>Phone . . . . .</p>
-          <p>+91 8888888888</p>
+          <p>{{phone}}</p>
         </div>
         <div class="details">
           <p>Freelance . . . . .</p>
-          <p>Unavailable</p>
+          <p>{{Freelance}}</p>
         </div>
       </div>
     </div>
