--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,7 +1,7 @@
 <div class="work-container">
   <header>
   </header>
-  <portfolio-gallery [config]="workList" [title]="'Recent Works'"></portfolio-gallery>
+  <portfolio-gallery [config]="workList2" [title]="'Recent Works'"></portfolio-gallery>
   <!-- <main>
     <div class="row">
       <div class="col">
