--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -169,19 +169,19 @@
 
             &:nth-child(1) {
                 .blog-image .image {
-                    background-image: url(../../assets/img/blog1.jpg);
+                    // background-image: url(/assets/img/blog1.jpg);
                 }
             }
 
             &:nth-child(2) {
                 .blog-image .image {
-                    background-image: url(../../assets/img/blog2.jpg);
+                    // background-image: url(/assets/img/blog2.jpg);
                 }
             }
 
             &:nth-child(3) {
                 .blog-image .image {
-                    background-image: url(../../assets/img/blog3.jpg);
+                    // background-image: url(/assets/img/blog3.jpg);
                 }
             }
 
